# opencode-bridge

./: README.md  pyproject.toml  slurm-serve-ollama.sh
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
chitta_bridge/: __init__.py  doctor.py  gpu_serve.py  install.py  server.py
codex-plugin/: .mcp.json  install.sh
codex-plugin/.codex-plugin/: plugin.json
codex-plugin/skills/rescue/: SKILL.md
codex-plugin/skills/review/: SKILL.md
codex-plugin/skills/room/: SKILL.md
codex-plugin/skills/soul/: SKILL.md
docs/: CNAME  docs.css  docs.html  index.html  styles.css
opencode_bridge/: __init__.py  server.py
skills/: opencode.md
tests/: test_chunking.py  test_codex_policy.py  test_companion.py  test_doctor.py  test_schema_migration.py
