[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencode-bridge"
version = "0.6.4"
description = "MCP server for continuous OpenCode and Codex discussion sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Antonio Fernandez-Guerra"}
]
keywords = ["opencode", "codex", "mcp", "claude", "gpt", "code-review", "discussion", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]

[project.urls]
Repository = "https://github.com/genomewalker/opencode-bridge"

[project.scripts]
opencode-bridge = "opencode_bridge.server:main"
opencode-bridge-install = "opencode_bridge.install:install"
opencode-bridge-uninstall = "opencode_bridge.install:uninstall"

[tool.hatch.build.targets.wheel]
packages = ["opencode_bridge"]

