[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chitta-bridge"
version = "0.6.4"
description = "MCP server for continuous OpenCode and Codex discussion sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Antonio Fernandez-Guerra"}
]
keywords = ["chitta", "codex", "mcp", "claude", "gpt", "code-review", "discussion", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]

[project.urls]
Repository = "https://github.com/genomewalker/chitta-bridge"

[project.scripts]
chitta-bridge = "chitta_bridge.server:main"
chitta-bridge-install = "chitta_bridge.install:install"
chitta-bridge-uninstall = "chitta_bridge.install:uninstall"

[tool.hatch.build.targets.wheel]
packages = ["chitta_bridge"]

