[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chitta-bridge"
version = "0.11.13"
description = "MCP server for multi-model AI discussions — cloud, agentic CLIs, local GPU models, soul memory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Antonio Fernandez-Guerra"}
]
keywords = ["chitta", "codex", "mcp", "claude", "gpt", "code-review", "discussion", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]

[project.urls]
Repository = "https://github.com/genomewalker/chitta-bridge"

[project.scripts]
chitta-bridge = "chitta_bridge.server:main"
chitta-bridge-install = "chitta_bridge.install:install"
chitta-bridge-uninstall = "chitta_bridge.install:uninstall"
chitta-gpu = "chitta_bridge.gpu_serve:main"

[tool.hatch.build.targets.wheel]
packages = ["chitta_bridge"]

[tool.hatch.build.targets.sdist]
include = ["chitta_bridge", "codex-plugin"]

[tool.hatch.build.targets.wheel.shared-data]
"codex-plugin" = "share/chitta-bridge/codex-plugin"

